--- a/css/modules/skills.css
+++ b/css/modules/skills.css
@@ -91,3 +91,29 @@
 .skills__mysql{
     width: 90%;
 }
+
+.skills__figma{
+    width: 90%;
+}
+
+.skills__sketch{
+    width: 65%;
+}
+
+.skills__photoshop{
+    width: 90%;
+}
+
+.skills__close .skills__list{
+    height: 0;
+    overflow: hidden;
+}
+
+.skills__open .skills__list{
+    height: max-content;
+    margin-bottom: var(--mb-2-5);
+}
+
+.skills__open .skills__arrow{
+    transform: rotate(-180deg);
+}
