--- a/css/index.css
+++ b/css/index.css
@@ -1,125 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap');
 @import './modules/variables.css';
-@import './modules/layout.css';
 @import './modules/section.css';
+@import './modules/layout.css';
 @import './modules/header.css';
 @import './modules/nav.css';
 @import './modules/home.css';
 @import './modules/buttons.css';
 @import './modules/about.css';
 @import './modules/skills.css';
+@import './modules/qualification.css';
 
-/*==================== BASE ====================*/
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
 
-.body {
-    margin: 0 0 var(--header-height) 0;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    background-color: var(--body-color);
-    color: var(--text-color);
-}
-
-h1,
-h2,
-h3,
-h4 {
-    color: var(--title-color);
-    font-weight: var(--font-semi-bold);
-}
-
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
 /* small screen */
-@media screen and (max-width: 350px){
-    .container{
+@media screen and (max-width: 350px) {
+    .container {
         margin-left: var(--mb-1);
         margin-right: var(--mb-1);
     }
 
-    .nav__menu{
+    .nav__menu {
         padding: 2rem .25rem 4rem;
     }
 
-    .nav__list{
+    .nav__list {
         column-gap: 0;
     }
 
-    .home__content{
+    .home__content {
         grid-template-columns: .25fr 3fr;
     }
 
-    .home__blob{
+    .home__blob {
         width: 180px;
     }
 
-    .skills__title{
+    .skills__title {
         font-size: var(--normal-font-size);
     }
 
-    .qualification__data{
+    .qualification__data {
         gap: .5rem;
     }
 
-    .services__container{
+    .services__container {
         grid-template-columns: max-content;
         justify-content: center;
     }
 
-    .services__content{
+    .services__content {
         padding-right: 3.5rem;
     }
 
-    .services__modal{
+    .services__modal {
         padding: 0 .5rem;
     }
 
-    .project__img{
+    .project__img {
         width: 200px;
     }
 
     .testimonial__data,
-    .testimonial__header{
+    .testimonial__header {
         flex-direction: column;
         align-items: center;
     }
 
-    .testimonial__img{
+    .testimonial__img {
         margin-right: 0;
         margin-bottom: var(--mb-0-25);
     }
 
     .testimonial__data,
-    .testimonial__description{
+    .testimonial__description {
         text-align: center;
     }
 }
 
 /* medium  screen*/
-@media screen and (min-width: 568px){
-    .home__content{
+@media screen and (min-width: 568px) {
+    .home__content {
         grid-template-columns: max-content 1fr 1fr;
     }
 
-    .home__data{
+    .home__data {
         grid-column: initial;
     }
 
-    .home__img{
+    .home__img {
         order: 1;
         justify-self: center;
     }
@@ -128,22 +95,123 @@ img {
     .skills__container,
     .portfolio__content,
     .project__container,
-    .contact__container{
-        grid-template-columns: repeat(2,1fr);
+    .contact__container,
+    .footer__container {
+        grid-template-columns: repeat(2, 1fr);
     }
 
-    .qualification__sections{
+    .qualification__sections {
         display: grid;
         grid-template-columns: .6fr;
         justify-content: center;
     }
 }
 
-/* large screen */
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 768px) {
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .body {
+        margin: 0;
+    }
+
+    .section {
+        padding: 6rem 0 2rem;
+    }
+
+    .section__subtitle {
+        margin-bottom: 4rem;
+    }
+
+    .header {
+        top: 0;
+        bottom: initial;
+    }
+
     .header,
     .main,
-    .footer__container{
+    .footer__container {
+        padding: 0 1rem;
+    }
+
+    .nav {
+        height: calc(var(--header-height) + 1.5rem);
+        column-gap: 1rem;
+    }
+
+    .nav__icon,
+    .nav__close,
+    .nav__toggle {
+        display: none;
+    }
+
+    .nav__list {
+        display: flex;
+        column-gap: 2rem;
+    }
+
+    .nav__menu {
+        margin-left: auto;
+    }
+
+    .change-theme {
+        margin: 0;
+    }
+
+    .home__container {
+        row-gap: 5rem;
+    }
+
+    .home__content {
+        padding-top: 5.5rem;
+        column-gap: 2rem;
+    }
+
+    .home__blob {
+        width: 270px;
+    }
+
+    .home__scroll {
+        display: block;
+    }
+
+    .home__scroll-button {
+        margin-left: 3rem;
+    }
+
+    .about__container {
+        column-gap: 5rem;
+    }
+
+    .about__img {
+        width: 350px;
+    }
+
+    .about__description {
+        text-align: initial;
+    }
+
+    .about__info {
+        justify-content: space-between;
+    }
+
+    .about__buttons {
+        justify-content: initial;
+    }
+
+    
+
+}
+
+
+/* large screen */
+@media screen and (min-width: 1024px) {
+
+    .header,
+    .main,
+    .footer__container {
         padding: 0;
     }
 
@@ -151,35 +219,39 @@ img {
         width: 320px;
     }
 
-    .home__social{
+    .home__social {
         transform: translateX(-6rem);
     }
-    
-    .services__container{
+
+    .services__container {
         grid-template-columns: repeat(3, 238px);
     }
-    .portfolio__content{
+
+    .portfolio__content {
         column-gap: 5rem;
     }
-    .swiper-portfolio-icon{
+
+    .swiper-portfolio-icon {
         font-size: 3rem;
     }
-    .swiper-button-prev{
+
+    .swiper-button-prev {
         left: -3.5rem;
     }
-    .swiper-button-next{
+
+    .swiper-button-next {
         right: -3.5rem;
     }
-    .swiper-container-horizontal > .swiper-pagination-bullets{
+
+    .swiper-container-horizontal>.swiper-pagination-bullets {
         bottom: -4.5rem;
     }
-    .contact__form{
+
+    .contact__form {
         width: 460px;
     }
-    .contact__inputs{
+
+    .contact__inputs {
         grid-template-columns: repeat(2, 1fr);
     }
 }
-
-
-
