--- a/css/modules/home.css
+++ b/css/modules/home.css
@@ -34,7 +34,7 @@
 }
 
 .home__data{
-    grid-column: 1 / 3;
+    grid-column: 1/3;
 }
 
 .home__title {
@@ -62,7 +62,7 @@
 }
 
 .home__scrol-button:hover{
-    transform: translateY(0.25rem);
+    transform: translateY(.25rem);
 }
 
 .home__scroll-mouse{
