--- a/css/modules/layout.css
+++ b/css/modules/layout.css
@@ -1,11 +1,10 @@
 .container {
-    max-width: var(--max-width-container);
+    max-width: 768px;
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
 }
 
-
-.grid{
+.grid {
     display: grid;
     gap: 1.5rem;
 }
