--- a/css/modules/qualification.css
+++ b/css/modules/qualification.css
@@ -4,7 +4,7 @@
   margin-bottom: var(--mb-2);
 }
 
-.qualification-tabs-button {
+.qualification__button {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   cursor: pointer;
@@ -33,7 +33,7 @@
 .qualification__subtitle {
   display: inline-block;
   font-size: var(--small-font-size);
-  margin-bottom: var(--mb-1);
+  margin-bottom: var(--mb-0-25);
 }
 
 .qualification__calendar {
